# factorize

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  combine__to__factor_8hpp.html  combine__to__factor_8hpp__dep__incl.map  combine__to__factor_8hpp__dep__incl.md5  combine__to__factor_8hpp__incl.map  combine__to__factor_8hpp__incl.md5  combine__to__factor_8hpp_source.html  create__factor_8hpp.html  create__factor_8hpp__dep__incl.map  create__factor_8hpp__dep__incl.md5  create__factor_8hpp__incl.map  create__factor_8hpp__incl.md5  create__factor_8hpp_source.html  dir_301e02df28cbd52dc0420dcfd76f6454.html  doxygen_crawl.html  factorize.tag  factorize_8hpp.html  factorize_8hpp__incl.map  factorize_8hpp__incl.md5  factorize_8hpp_source.html  files.html  graph_legend.html  index.html  namespacefactorize.html  namespacemembers.html  namespacemembers_func.html  namespaces.html
docs/search/: all_0.js  all_1.js  files_0.js  files_1.js  functions_0.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
include/factorize/: combine_to_factor.hpp  create_factor.hpp  factorize.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: combine_to_factor.cpp  create_factor.cpp
